// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-pagination-items-per-page #render should render as expected (1) 1`] = `
<gux-pagination-items-per-page items-per-page="25" disabled="false">
  <div class="gux-pagination-items-per-page-container">
    <div class="gux-pagination-items-per-page-picker">
      <gux-dropdown aria-label="Items per page dropdown, 25 items per page selected">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <gux-popup>
            <div class="gux-target-container-not-filterable" slot="target">
              <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
                <div class="gux-field-content">
                  <div class="gux-selected-option">
                    <gux-truncate dir="auto">
                      25
                    </gux-truncate>
                  </div>
                </div>
                <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
                </gux-icon>
              </button>
            </div>
            <slot slot="popup">
            </slot>
          </gux-popup>
        </template>
        <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
          <template shadowrootmode="open">
            <slot>
            </slot>
          </template>
          <gux-option id="gux-option-i" role="option" class="gux-selected" aria-selected="true" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>25
          </gux-option>
          <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>50
          </gux-option>
          <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>75
          </gux-option>
          <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>100
          </gux-option>
        </gux-listbox>
      </gux-dropdown>
    </div>
    <div class="gux-pagination-per-page">
      per page
    </div>
  </div>
</gux-pagination-items-per-page>
`;

exports[`gux-pagination-items-per-page #render should render as expected (2) 1`] = `
<gux-pagination-items-per-page items-per-page="50" disabled="false">
  <div class="gux-pagination-items-per-page-container">
    <div class="gux-pagination-items-per-page-picker">
      <gux-dropdown aria-label="Items per page dropdown, 50 items per page selected">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <gux-popup>
            <div class="gux-target-container-not-filterable" slot="target">
              <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
                <div class="gux-field-content">
                  <div class="gux-selected-option">
                    <gux-truncate dir="auto">
                      50
                    </gux-truncate>
                  </div>
                </div>
                <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
                </gux-icon>
              </button>
            </div>
            <slot slot="popup">
            </slot>
          </gux-popup>
        </template>
        <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
          <template shadowrootmode="open">
            <slot>
            </slot>
          </template>
          <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>25
          </gux-option>
          <gux-option id="gux-option-i" role="option" class="gux-selected" aria-selected="true" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>50
          </gux-option>
          <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>75
          </gux-option>
          <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>100
          </gux-option>
        </gux-listbox>
      </gux-dropdown>
    </div>
    <div class="gux-pagination-per-page">
      per page
    </div>
  </div>
</gux-pagination-items-per-page>
`;

exports[`gux-pagination-items-per-page #render should render as expected (3) 1`] = `
<gux-pagination-items-per-page items-per-page="75" disabled="false">
  <div class="gux-pagination-items-per-page-container">
    <div class="gux-pagination-items-per-page-picker">
      <gux-dropdown aria-label="Items per page dropdown, 75 items per page selected">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <gux-popup>
            <div class="gux-target-container-not-filterable" slot="target">
              <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
                <div class="gux-field-content">
                  <div class="gux-selected-option">
                    <gux-truncate dir="auto">
                      75
                    </gux-truncate>
                  </div>
                </div>
                <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
                </gux-icon>
              </button>
            </div>
            <slot slot="popup">
            </slot>
          </gux-popup>
        </template>
        <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
          <template shadowrootmode="open">
            <slot>
            </slot>
          </template>
          <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>25
          </gux-option>
          <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>50
          </gux-option>
          <gux-option id="gux-option-i" role="option" class="gux-selected" aria-selected="true" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>75
          </gux-option>
          <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>100
          </gux-option>
        </gux-listbox>
      </gux-dropdown>
    </div>
    <div class="gux-pagination-per-page">
      per page
    </div>
  </div>
</gux-pagination-items-per-page>
`;

exports[`gux-pagination-items-per-page #render should render as expected (4) 1`] = `
<gux-pagination-items-per-page items-per-page="100" disabled="false">
  <div class="gux-pagination-items-per-page-container">
    <div class="gux-pagination-items-per-page-picker">
      <gux-dropdown aria-label="Items per page dropdown, 100 items per page selected">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <gux-popup>
            <div class="gux-target-container-not-filterable" slot="target">
              <button type="button" class="gux-field gux-field-button" aria-haspopup="listbox" aria-expanded="false">
                <div class="gux-field-content">
                  <div class="gux-selected-option">
                    <gux-truncate dir="auto">
                      100
                    </gux-truncate>
                  </div>
                </div>
                <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
                </gux-icon>
              </button>
            </div>
            <slot slot="popup">
            </slot>
          </gux-popup>
        </template>
        <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
          <template shadowrootmode="open">
            <slot>
            </slot>
          </template>
          <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>25
          </gux-option>
          <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>50
          </gux-option>
          <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>75
          </gux-option>
          <gux-option id="gux-option-i" role="option" class="gux-selected" aria-selected="true" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>100
          </gux-option>
        </gux-listbox>
      </gux-dropdown>
    </div>
    <div class="gux-pagination-per-page">
      per page
    </div>
  </div>
</gux-pagination-items-per-page>
`;

exports[`gux-pagination-items-per-page #render should render as expected (5) 1`] = `
<gux-pagination-items-per-page items-per-page="25" disabled="true">
  <div class="gux-pagination-items-per-page-container">
    <div class="gux-pagination-items-per-page-picker">
      <gux-dropdown aria-label="Items per page dropdown, 25 items per page selected">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <gux-popup disabled="">
            <div class="gux-target-container-not-filterable gux-disabled" slot="target">
              <button type="button" class="gux-field gux-field-button" disabled="" aria-haspopup="listbox" aria-expanded="false">
                <div class="gux-field-content">
                  <div class="gux-selected-option">
                    <gux-truncate dir="auto">
                      25
                    </gux-truncate>
                  </div>
                </div>
                <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
                </gux-icon>
              </button>
            </div>
            <slot slot="popup">
            </slot>
          </gux-popup>
        </template>
        <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
          <template shadowrootmode="open">
            <slot>
            </slot>
          </template>
          <gux-option id="gux-option-i" role="option" class="gux-selected" aria-selected="true" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>25
          </gux-option>
          <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>50
          </gux-option>
          <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>75
          </gux-option>
          <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>100
          </gux-option>
        </gux-listbox>
      </gux-dropdown>
    </div>
    <div class="gux-pagination-per-page">
      per page
    </div>
  </div>
</gux-pagination-items-per-page>
`;

exports[`gux-pagination-items-per-page #render should render as expected (6) 1`] = `
<gux-pagination-items-per-page items-per-page="50" disabled="true">
  <div class="gux-pagination-items-per-page-container">
    <div class="gux-pagination-items-per-page-picker">
      <gux-dropdown aria-label="Items per page dropdown, 50 items per page selected">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <gux-popup disabled="">
            <div class="gux-target-container-not-filterable gux-disabled" slot="target">
              <button type="button" class="gux-field gux-field-button" disabled="" aria-haspopup="listbox" aria-expanded="false">
                <div class="gux-field-content">
                  <div class="gux-selected-option">
                    <gux-truncate dir="auto">
                      50
                    </gux-truncate>
                  </div>
                </div>
                <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
                </gux-icon>
              </button>
            </div>
            <slot slot="popup">
            </slot>
          </gux-popup>
        </template>
        <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
          <template shadowrootmode="open">
            <slot>
            </slot>
          </template>
          <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>25
          </gux-option>
          <gux-option id="gux-option-i" role="option" class="gux-selected" aria-selected="true" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>50
          </gux-option>
          <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>75
          </gux-option>
          <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>100
          </gux-option>
        </gux-listbox>
      </gux-dropdown>
    </div>
    <div class="gux-pagination-per-page">
      per page
    </div>
  </div>
</gux-pagination-items-per-page>
`;

exports[`gux-pagination-items-per-page #render should render as expected (7) 1`] = `
<gux-pagination-items-per-page items-per-page="75" disabled="true">
  <div class="gux-pagination-items-per-page-container">
    <div class="gux-pagination-items-per-page-picker">
      <gux-dropdown aria-label="Items per page dropdown, 75 items per page selected">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <gux-popup disabled="">
            <div class="gux-target-container-not-filterable gux-disabled" slot="target">
              <button type="button" class="gux-field gux-field-button" disabled="" aria-haspopup="listbox" aria-expanded="false">
                <div class="gux-field-content">
                  <div class="gux-selected-option">
                    <gux-truncate dir="auto">
                      75
                    </gux-truncate>
                  </div>
                </div>
                <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
                </gux-icon>
              </button>
            </div>
            <slot slot="popup">
            </slot>
          </gux-popup>
        </template>
        <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
          <template shadowrootmode="open">
            <slot>
            </slot>
          </template>
          <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>25
          </gux-option>
          <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>50
          </gux-option>
          <gux-option id="gux-option-i" role="option" class="gux-selected" aria-selected="true" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>75
          </gux-option>
          <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>100
          </gux-option>
        </gux-listbox>
      </gux-dropdown>
    </div>
    <div class="gux-pagination-per-page">
      per page
    </div>
  </div>
</gux-pagination-items-per-page>
`;

exports[`gux-pagination-items-per-page #render should render as expected (8) 1`] = `
<gux-pagination-items-per-page items-per-page="100" disabled="true">
  <div class="gux-pagination-items-per-page-container">
    <div class="gux-pagination-items-per-page-picker">
      <gux-dropdown aria-label="Items per page dropdown, 100 items per page selected">
        <template shadowrootmode="open" shadowrootdelegatesfocus>
          <gux-popup disabled="">
            <div class="gux-target-container-not-filterable gux-disabled" slot="target">
              <button type="button" class="gux-field gux-field-button" disabled="" aria-haspopup="listbox" aria-expanded="false">
                <div class="gux-field-content">
                  <div class="gux-selected-option">
                    <gux-truncate dir="auto">
                      100
                    </gux-truncate>
                  </div>
                </div>
                <gux-icon class="gux-expand-icon" screenreader-text="Dropdown" size="small" iconname="custom/chevron-down-small-regular">
                </gux-icon>
              </button>
            </div>
            <slot slot="popup">
            </slot>
          </gux-popup>
        </template>
        <gux-listbox aria-label="Items per page" role="listbox" tabindex="0">
          <template shadowrootmode="open">
            <slot>
            </slot>
          </template>
          <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>25
          </gux-option>
          <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>50
          </gux-option>
          <gux-option id="gux-option-i" role="option" aria-selected="false" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>75
          </gux-option>
          <gux-option id="gux-option-i" role="option" class="gux-selected" aria-selected="true" aria-disabled="false">
            <template shadowrootmode="open">
              <div class="gux-option-wrapper">
                <gux-truncate tooltip-placement="right">
                  <slot>
                  </slot>
                </gux-truncate>
                <slot name="subtext">
                </slot>
              </div>
            </template>100
          </gux-option>
        </gux-listbox>
      </gux-dropdown>
    </div>
    <div class="gux-pagination-per-page">
      per page
    </div>
  </div>
</gux-pagination-items-per-page>
`;
